@@ -1,4 +1,4 @@
-$Id: CHANGELOG,v 1.54 2003-03-05 22:13:11 adam Exp $
+$Id: CHANGELOG,v 1.55 2003-11-29 17:24:09 adam Exp $
 
 06/19/95 Release of ir-tcl-1.0b
 ------------------------------------------------------
@@ -169,3 +169,5 @@ $Id: CHANGELOG,v 1.54 2003-03-05 22:13:11 adam Exp $
 05/03/03 APDU dump : written to same file as log when DEBUG is enabled.
 
 05/03/03 IRTCL.DLL is using Tcl stubs on Win32. 
+
+11/29/03 Added getXml method to retrieve XML record. (Franck Falcoz).
